--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
     background-image: url(images/BG.webp);
     height: 300vh;
     background-size: cover;
-    overflow-x: hidden;
+    overflow: hidden;
   }
 }
 
