--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
     background-image: url(images/BG.webp);
     height: 300vh;
     background-size: cover;
+    overflow-x: hidden;
 
   }
 }
